@@ -11,6 +11,12 @@
 require_once __DIR__ . '/lib/Application.php';
 Horde_Registry::appInit('sesha');
 
+$topbar = $injector->getInstance('Horde_View_Topbar');
+$topbar->search = true;
+$topbar->searchAction = new Horde_Url('list.php');
+$topbar->searchLabel = _("Stock Id");
+$topbar->searchIcon = Horde_Themes::img('search-topbar.png');
+
 $perms = $GLOBALS['injector']->getInstance('Horde_Perms');
 $sesha_driver = $GLOBALS['injector']->getInstance('Sesha_Factory_Driver')->create();
 $vars = Horde_Variables::getDefaultVariables();
@@ -266,7 +272,6 @@ case 'list_properties':
 $page_output->header(array(
     'title' => $title
 ));
-require SESHA_TEMPLATES . '/menu.inc';
 echo $tabs->render(strpos($actionID, 'propert') === false ? 'list_categories' : 'list_properties');
 
 // Render forms if they are defined.
