@@ -2,6 +2,7 @@
 v1.0.0-git
 ----------
 
+[rla] QuickSearch now works by Name or Id (Request #11657).
 
 
 ---------
